--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -507,73 +507,73 @@
 	"block.mubble.gray_concrete_button": "Grijze betonnen knop",
 	"block.mubble.black_concrete_button": "Zwarte betonnen knop",
 
-	"//block.mubble.blue_quartz_paving": "Blue Quartz Paving",
-	"//block.mubble.light_blue_quartz_paving": "Light Blue Quartz Paving",
-	"//block.mubble.cyan_quartz_paving": "Cyan Quartz Paving",
-	"//block.mubble.green_quartz_paving": "Green Quartz Paving",
-	"//block.mubble.lime_quartz_paving": "Lime Quartz Paving",
-	"//block.mubble.yellow_quartz_paving": "Yellow Quartz Paving",
-	"//block.mubble.orange_quartz_paving": "Orange Quartz Paving",
-	"//block.mubble.red_quartz_paving": "Red Quartz Paving",
-	"//block.mubble.pink_quartz_paving": "Pink Quartz Paving",
-	"//block.mubble.magenta_quartz_paving": "Magenta Quartz Paving",
-	"//block.mubble.purple_quartz_paving": "Purple Quartz Paving",
-	"//block.mubble.brown_quartz_paving": "Brown Quartz Paving",
-	"//block.mubble.white_quartz_paving": "White Quartz Paving",
-	"//block.mubble.light_gray_quartz_paving": "Light Gray Quartz Paving",
-	"//block.mubble.gray_quartz_paving": "Gray Quartz Paving",
-	"//block.mubble.black_quartz_paving": "Black Quartz Paving",
+	"block.mubble.blue_quartz_paving": "Blauwe quartz tegels",
+	"block.mubble.light_blue_quartz_paving": "Lichtblauwe quartz tegels",
+	"block.mubble.cyan_quartz_paving": "Turquoise quartz tegels",
+	"block.mubble.green_quartz_paving": "Groene quartz tegels",
+	"block.mubble.lime_quartz_paving": "Lichtgroene quartz tegels",
+	"block.mubble.yellow_quartz_paving": "Gele quartz tegels",
+	"block.mubble.orange_quartz_paving": "Oranje quartz tegels",
+	"block.mubble.red_quartz_paving": "Rode quartz tegels",
+	"block.mubble.pink_quartz_paving": "Roze quartz tegels",
+	"block.mubble.magenta_quartz_paving": "Magenta quartz tegels",
+	"block.mubble.purple_quartz_paving": "Paarse quartz tegels",
+	"block.mubble.brown_quartz_paving": "Bruine quartz tegels",
+	"block.mubble.white_quartz_paving": "Witte quartz tegels",
+	"block.mubble.light_gray_quartz_paving": "Lichtgrijze quartz tegels",
+	"block.mubble.gray_quartz_paving": "Grijze quartz tegels",
+	"block.mubble.black_quartz_paving": "Zwarte quartz tegels",
 
-	"//block.mubble.blue_quartz_paving_stairs": "Blue Quartz Paving Stairs",
-	"//block.mubble.light_blue_quartz_paving_stairs": "Light Blue Quartz Paving Stairs",
-	"//block.mubble.cyan_quartz_paving_stairs": "Cyan Quartz Paving Stairs",
-	"//block.mubble.green_quartz_paving_stairs": "Green Quartz Paving Stairs",
-	"//block.mubble.lime_quartz_paving_stairs": "Lime Quartz Paving Stairs",
-	"//block.mubble.yellow_quartz_paving_stairs": "Yellow Quartz Paving Stairs",
-	"//block.mubble.orange_quartz_paving_stairs": "Orange Quartz Paving Stairs",
-	"//block.mubble.red_quartz_paving_stairs": "Red Quartz Paving Stairs",
-	"//block.mubble.pink_quartz_paving_stairs": "Pink Quartz Paving Stairs",
-	"//block.mubble.magenta_quartz_paving_stairs": "Magenta Quartz Paving Stairs",
-	"//block.mubble.purple_quartz_paving_stairs": "Purple Quartz Paving Stairs",
-	"//block.mubble.brown_quartz_paving_stairs": "Brown Quartz Paving Stairs",
-	"//block.mubble.white_quartz_paving_stairs": "White Quartz Paving Stairs",
-	"//block.mubble.light_gray_quartz_paving_stairs": "Light Gray Quartz Paving Stairs",
-	"//block.mubble.gray_quartz_paving_stairs": "Gray Quartz Paving Stairs",
-	"//block.mubble.black_quartz_paving_stairs": "Black Quartz Paving Stairs",
+	"block.mubble.blue_quartz_paving_stairs": "Blauwe quartz tegeltrap",
+	"block.mubble.light_blue_quartz_paving_stairs": "Lichtblauwe quartz tegeltrap",
+	"block.mubble.cyan_quartz_paving_stairs": "Turquoise quartz tegeltrap",
+	"block.mubble.green_quartz_paving_stairs": "Groene quartz tegeltrap",
+	"block.mubble.lime_quartz_paving_stairs": "Lichtgroene quartz tegeltrap",
+	"block.mubble.yellow_quartz_paving_stairs": "Gele quartz tegeltrap",
+	"block.mubble.orange_quartz_paving_stairs": "Oranje quartz tegeltrap",
+	"block.mubble.red_quartz_paving_stairs": "Rode quartz tegeltrap",
+	"block.mubble.pink_quartz_paving_stairs": "Roze quartz tegeltrap",
+	"block.mubble.magenta_quartz_paving_stairs": "Magenta quartz tegeltrap",
+	"block.mubble.purple_quartz_paving_stairs": "Paarse quartz tegeltrap",
+	"block.mubble.brown_quartz_paving_stairs": "Bruine quartz tegeltrap",
+	"block.mubble.white_quartz_paving_stairs": "Witte quartz tegeltrap",
+	"block.mubble.light_gray_quartz_paving_stairs": "Lichtgrijze quartz tegeltrap",
+	"block.mubble.gray_quartz_paving_stairs": "Grijze quartz tegeltrap",
+	"block.mubble.black_quartz_paving_stairs": "Zwarte quartz tegeltrap",
 
-	"//block.mubble.blue_quartz_paving_slab": "Blue Quartz Paving Slab",
-	"//block.mubble.light_blue_quartz_paving_slab": "Light Blue Quartz Paving Slab",
-	"//block.mubble.cyan_quartz_paving_slab": "Cyan Quartz Paving Slab",
-	"//block.mubble.green_quartz_paving_slab": "Green Quartz Paving Slab",
-	"//block.mubble.lime_quartz_paving_slab": "Lime Quartz Paving Slab",
-	"//block.mubble.yellow_quartz_paving_slab": "Yellow Quartz Paving Slab",
-	"//block.mubble.orange_quartz_paving_slab": "Orange Quartz Paving Slab",
-	"//block.mubble.red_quartz_paving_slab": "Red Quartz Paving Slab",
-	"//block.mubble.pink_quartz_paving_slab": "Pink Quartz Paving Slab",
-	"//block.mubble.magenta_quartz_paving_slab": "Magenta Quartz Paving Slab",
-	"//block.mubble.purple_quartz_paving_slab": "Purple Quartz Paving Slab",
-	"//block.mubble.brown_quartz_paving_slab": "Brown Quartz Paving Slab",
-	"//block.mubble.white_quartz_paving_slab": "White Quartz Paving Slab",
-	"//block.mubble.light_gray_quartz_paving_slab": "Light Gray Quartz Paving Slab",
-	"//block.mubble.gray_quartz_paving_slab": "Gray Quartz Paving Slab",
-	"//block.mubble.black_quartz_paving_slab": "Black Quartz Paving Slab",
+	"block.mubble.blue_quartz_paving_slab": "Blauwe quartz tegelplaat",
+	"block.mubble.light_blue_quartz_paving_slab": "Lichtblauwe quartz tegelplaat",
+	"block.mubble.cyan_quartz_paving_slab": "Turquoise quartz tegelplaat",
+	"block.mubble.green_quartz_paving_slab": "Groene quartz tegelplaat",
+	"block.mubble.lime_quartz_paving_slab": "Lichtgroene quartz tegelplaat",
+	"block.mubble.yellow_quartz_paving_slab": "Gele quartz tegelplaat",
+	"block.mubble.orange_quartz_paving_slab": "Oranje quartz tegelplaat",
+	"block.mubble.red_quartz_paving_slab": "Rode quartz tegelplaat",
+	"block.mubble.pink_quartz_paving_slab": "Roze quartz tegelplaat",
+	"block.mubble.magenta_quartz_paving_slab": "Magenta quartz tegelplaat",
+	"block.mubble.purple_quartz_paving_slab": "Paarse quartz tegelplaat",
+	"block.mubble.brown_quartz_paving_slab": "Bruine quartz tegelplaat",
+	"block.mubble.white_quartz_paving_slab": "Witte quartz tegelplaat",
+	"block.mubble.light_gray_quartz_paving_slab": "Lichtgrijze quartz tegelplaat",
+	"block.mubble.gray_quartz_paving_slab": "Grijze quartz tegelplaat",
+	"block.mubble.black_quartz_paving_slab": "Zwarte quartz tegelplaat",
 
-	"//block.mubble.blue_quartz_paving_vertical_slab": "Blue Quartz Paving Vertical Slab",
-	"//block.mubble.light_blue_quartz_paving_vertical_slab": "Light Blue Quartz Paving Vertical Slab",
-	"//block.mubble.cyan_quartz_paving_vertical_slab": "Cyan Quartz Paving Vertical Slab",
-	"//block.mubble.green_quartz_paving_vertical_slab": "Green Quartz Paving Vertical Slab",
-	"//block.mubble.lime_quartz_paving_vertical_slab": "Lime Quartz Paving Vertical Slab",
-	"//block.mubble.yellow_quartz_paving_vertical_slab": "Yellow Quartz Paving Vertical Slab",
-	"//block.mubble.orange_quartz_paving_vertical_slab": "Orange Quartz Paving Vertical Slab",
-	"//block.mubble.red_quartz_paving_vertical_slab": "Red Quartz Paving Vertical Slab",
-	"//block.mubble.pink_quartz_paving_vertical_slab": "Pink Quartz Paving Vertical Slab",
-	"//block.mubble.magenta_quartz_paving_vertical_slab": "Magenta Quartz Paving Vertical Slab",
-	"//block.mubble.purple_quartz_paving_vertical_slab": "Purple Quartz Paving Vertical Slab",
-	"//block.mubble.brown_quartz_paving_vertical_slab": "Brown Quartz Paving Vertical Slab",
-	"//block.mubble.white_quartz_paving_vertical_slab": "White Quartz Paving Vertical Slab",
-	"//block.mubble.light_gray_quartz_paving_vertical_slab": "Light Gray Quartz Paving Vertical Slab",
-	"//block.mubble.gray_quartz_paving_vertical_slab": "Gray Quartz Paving Vertical Slab",
-	"//block.mubble.black_quartz_paving_vertical_slab": "Black Quartz Paving Vertical Slab",
+	"block.mubble.blue_quartz_paving_vertical_slab": "Blauwe quartz tegel verticale plaat",
+	"block.mubble.light_blue_quartz_paving_vertical_slab": "Lichtblauwe quartz tegel verticale plaat",
+	"block.mubble.cyan_quartz_paving_vertical_slab": "Turquoise quartz tegel verticale plaat",
+	"block.mubble.green_quartz_paving_vertical_slab": "Groene quartz tegel verticale plaat",
+	"block.mubble.lime_quartz_paving_vertical_slab": "Lichtgroene quartz tegel verticale plaat",
+	"block.mubble.yellow_quartz_paving_vertical_slab": "Gele quartz tegel verticale plaat",
+	"block.mubble.orange_quartz_paving_vertical_slab": "Oranje quartz tegel verticale plaat",
+	"block.mubble.red_quartz_paving_vertical_slab": "Rode quartz tegel verticale plaat",
+	"block.mubble.pink_quartz_paving_vertical_slab": "Roze quartz tegel verticale plaat",
+	"block.mubble.magenta_quartz_paving_vertical_slab": "Magenta quartz tegel verticale plaat",
+	"block.mubble.purple_quartz_paving_vertical_slab": "Paarse quartz tegel verticale plaat",
+	"block.mubble.brown_quartz_paving_vertical_slab": "Bruine quartz tegel verticale plaat",
+	"block.mubble.white_quartz_paving_vertical_slab": "Witte quartz tegel verticale plaat",
+	"block.mubble.light_gray_quartz_paving_vertical_slab": "Lichtgrijze quartz tegel verticale plaat",
+	"block.mubble.gray_quartz_paving_vertical_slab": "Grijze quartz tegel verticale plaat",
+	"block.mubble.black_quartz_paving_vertical_slab": "Zwarte quartz tegel verticale plaat",
 
 	"block.mubble.red_christmas_bauble": "Rode kerstbal",
 	"block.mubble.orange_christmas_bauble": "Orange kerstbal",
@@ -583,17 +583,17 @@
 	"block.mubble.pink_christmas_bauble": "Roze kerstbal",
 	"block.mubble.blue_christmas_bauble": "Blauwe kerstbal",
 	"block.mubble.light_blue_christmas_bauble": "Lichtblauwe kerstbal",
-	"//block.mubble.green_christmas_bauble": "Green Christmas Bauble",
+	"block.mubble.green_christmas_bauble": "Groene kerstbal",
 	"block.mubble.white_christmas_bauble": "Witte kerstbal",
 
 	"block.mubble.red_shiny_garland": "Rode glanzende slinger",
 	"block.mubble.silver_shiny_garland": "Zilvere glanzende slinger",
 	"block.mubble.gold_shiny_garland": "Goude glanzende slinger",
 
-	"//block.mubble.blue_present": "Blue Present",
-	"//block.mubble.green_present": "Green Present",
-	"//block.mubble.yellow_present": "Yellow Present",
-	"//block.mubble.red_present": "Red Present",
+	"block.mubble.blue_present": "Blauw cadeau",
+	"block.mubble.green_present": "Groen cadeau",
+	"block.mubble.yellow_present": "Geel cadeau",
+	"block.mubble.red_present": "Rood cadeau",
 
 	"block.mubble.footblock": "Voetblok",
 	
@@ -969,12 +969,12 @@
 	"item.mubble.vanadium": "Vanadium",
 	"item.mubble.bismuth_dust": "Bismuthstof",
 	"item.mubble.crystallized_bismuth": "Gekristalliseerde bismuth",
-	"//item.mubble.bismuth_sword": "Bismuth Sword",
-	"//item.mubble.bismuth_shovel": "Bismuth Shovel",
-	"//item.mubble.bismuth_pickaxe": "Bismuth Pickaxe",
-	"//item.mubble.bismuth_axe": "Bismuth Axe",
-	"//item.mubble.bismuth_hoe": "Bismuth Hoe",
-	"//item.mubble.diamond_stick": "Diamond Stick",
+	"item.mubble.bismuth_sword": "Bismuth zwaart",
+	"item.mubble.bismuth_shovel": "Bismuth schep",
+	"item.mubble.bismuth_pickaxe": "Bismuth houweel",
+	"item.mubble.bismuth_axe": "Bismuth bijl",
+	"item.mubble.bismuth_hoe": "Bismuth schoffel",
+	"item.mubble.diamond_stick": "Diamante stok",
 	"item.mubble.permafrost_brick": "Permafrostbaksteen",
 	"item.mubble.bandage": "Verband",
 	"item.mubble.wheat_flour": "Tarwemeel",
@@ -1152,7 +1152,7 @@
 	"comment": "CONTAINERS",
 	"container.mubble.placer": "Plaatser",
 	"container.mubble.timeswap_table": "Tijdwisselstafel",
-	"//container.mubble.present": "Present",
+	"container.mubble.present": "Cadeau",
 
 
 
