--- a/src/main/resources/assets/mubble/lang/fr_fr.json
+++ b/src/main/resources/assets/mubble/lang/fr_fr.json
@@ -507,73 +507,73 @@
 	"block.mubble.gray_concrete_button": "Bouton en béton gris",
 	"block.mubble.black_concrete_button": "Bouton en béton noir",
 
-	"//block.mubble.blue_quartz_paving": "Blue Quartz Paving",
-	"//block.mubble.light_blue_quartz_paving": "Light Blue Quartz Paving",
-	"//block.mubble.cyan_quartz_paving": "Cyan Quartz Paving",
-	"//block.mubble.green_quartz_paving": "Green Quartz Paving",
-	"//block.mubble.lime_quartz_paving": "Lime Quartz Paving",
-	"//block.mubble.yellow_quartz_paving": "Yellow Quartz Paving",
-	"//block.mubble.orange_quartz_paving": "Orange Quartz Paving",
-	"//block.mubble.red_quartz_paving": "Red Quartz Paving",
-	"//block.mubble.pink_quartz_paving": "Pink Quartz Paving",
-	"//block.mubble.magenta_quartz_paving": "Magenta Quartz Paving",
-	"//block.mubble.purple_quartz_paving": "Purple Quartz Paving",
-	"//block.mubble.brown_quartz_paving": "Brown Quartz Paving",
-	"//block.mubble.white_quartz_paving": "White Quartz Paving",
-	"//block.mubble.light_gray_quartz_paving": "Light Gray Quartz Paving",
-	"//block.mubble.gray_quartz_paving": "Gray Quartz Paving",
-	"//block.mubble.black_quartz_paving": "Black Quartz Paving",
+	"block.mubble.blue_quartz_paving": "Carrelage de quartz bleu",
+	"block.mubble.light_blue_quartz_paving": "Carrelage de quartz bleu clair",
+	"block.mubble.cyan_quartz_paving": "Carrelage de quartz cyan",
+	"block.mubble.green_quartz_paving": "Carrelage de quartz vert",
+	"block.mubble.lime_quartz_paving": "Carrelage de quartz vert clair",
+	"block.mubble.yellow_quartz_paving": "Carrelage de quartz jaune",
+	"block.mubble.orange_quartz_paving": "Carrelage de quartz orange",
+	"block.mubble.red_quartz_paving": "Carrelage de quartz rouge",
+	"block.mubble.pink_quartz_paving": "Carrelage de quartz rose",
+	"block.mubble.magenta_quartz_paving": "Carrelage de quartz magenta",
+	"block.mubble.purple_quartz_paving": "Carrelage de quartz violet",
+	"block.mubble.brown_quartz_paving": "Carrelage de quartz marron",
+	"block.mubble.white_quartz_paving": "Carrelage de quartz blanc",
+	"block.mubble.light_gray_quartz_paving": "Carrelage de quartz gris clair",
+	"block.mubble.gray_quartz_paving": "Carrelage de quartz gris",
+	"block.mubble.black_quartz_paving": "Carrelage de quartz noir",
 
-	"//block.mubble.blue_quartz_paving_stairs": "Blue Quartz Paving Stairs",
-	"//block.mubble.light_blue_quartz_paving_stairs": "Light Blue Quartz Paving Stairs",
-	"//block.mubble.cyan_quartz_paving_stairs": "Cyan Quartz Paving Stairs",
-	"//block.mubble.green_quartz_paving_stairs": "Green Quartz Paving Stairs",
-	"//block.mubble.lime_quartz_paving_stairs": "Lime Quartz Paving Stairs",
-	"//block.mubble.yellow_quartz_paving_stairs": "Yellow Quartz Paving Stairs",
-	"//block.mubble.orange_quartz_paving_stairs": "Orange Quartz Paving Stairs",
-	"//block.mubble.red_quartz_paving_stairs": "Red Quartz Paving Stairs",
-	"//block.mubble.pink_quartz_paving_stairs": "Pink Quartz Paving Stairs",
-	"//block.mubble.magenta_quartz_paving_stairs": "Magenta Quartz Paving Stairs",
-	"//block.mubble.purple_quartz_paving_stairs": "Purple Quartz Paving Stairs",
-	"//block.mubble.brown_quartz_paving_stairs": "Brown Quartz Paving Stairs",
-	"//block.mubble.white_quartz_paving_stairs": "White Quartz Paving Stairs",
-	"//block.mubble.light_gray_quartz_paving_stairs": "Light Gray Quartz Paving Stairs",
-	"//block.mubble.gray_quartz_paving_stairs": "Gray Quartz Paving Stairs",
-	"//block.mubble.black_quartz_paving_stairs": "Black Quartz Paving Stairs",
+	"block.mubble.blue_quartz_paving_stairs": "Escalier en carrelage de quartz bleu",
+	"block.mubble.light_blue_quartz_paving_stairs": "Escalier en carrelage de quartz bleu clair",
+	"block.mubble.cyan_quartz_paving_stairs": "Escalier en carrelage de quartz cyan",
+	"block.mubble.green_quartz_paving_stairs": "Escalier en carrelage de quartz vert",
+	"block.mubble.lime_quartz_paving_stairs": "Escalier en carrelage de quartz vert clair",
+	"block.mubble.yellow_quartz_paving_stairs": "Escalier en carrelage de quartz jaune",
+	"block.mubble.orange_quartz_paving_stairs": "Escalier en carrelage de quartz orange",
+	"block.mubble.red_quartz_paving_stairs": "Escalier en carrelage de quartz rouge",
+	"block.mubble.pink_quartz_paving_stairs": "Escalier en carrelage de quartz rose",
+	"block.mubble.magenta_quartz_paving_stairs": "Escalier en carrelage de quartz magenta",
+	"block.mubble.purple_quartz_paving_stairs": "Escalier en carrelage de quartz violet",
+	"block.mubble.brown_quartz_paving_stairs": "Escalier en carrelage de quartz marron",
+	"block.mubble.white_quartz_paving_stairs": "Escalier en carrelage de quartz blanc",
+	"block.mubble.light_gray_quartz_paving_stairs": "Escalier en carrelage de quartz gris clair",
+	"block.mubble.gray_quartz_paving_stairs": "Escalier en carrelage de quartz gris",
+	"block.mubble.black_quartz_paving_stairs": "Escalier en carrelage de quartz noir",
 
-	"//block.mubble.blue_quartz_paving_slab": "Blue Quartz Paving Slab",
-	"//block.mubble.light_blue_quartz_paving_slab": "Light Blue Quartz Paving Slab",
-	"//block.mubble.cyan_quartz_paving_slab": "Cyan Quartz Paving Slab",
-	"//block.mubble.green_quartz_paving_slab": "Green Quartz Paving Slab",
-	"//block.mubble.lime_quartz_paving_slab": "Lime Quartz Paving Slab",
-	"//block.mubble.yellow_quartz_paving_slab": "Yellow Quartz Paving Slab",
-	"//block.mubble.orange_quartz_paving_slab": "Orange Quartz Paving Slab",
-	"//block.mubble.red_quartz_paving_slab": "Red Quartz Paving Slab",
-	"//block.mubble.pink_quartz_paving_slab": "Pink Quartz Paving Slab",
-	"//block.mubble.magenta_quartz_paving_slab": "Magenta Quartz Paving Slab",
-	"//block.mubble.purple_quartz_paving_slab": "Purple Quartz Paving Slab",
-	"//block.mubble.brown_quartz_paving_slab": "Brown Quartz Paving Slab",
-	"//block.mubble.white_quartz_paving_slab": "White Quartz Paving Slab",
-	"//block.mubble.light_gray_quartz_paving_slab": "Light Gray Quartz Paving Slab",
-	"//block.mubble.gray_quartz_paving_slab": "Gray Quartz Paving Slab",
-	"//block.mubble.black_quartz_paving_slab": "Black Quartz Paving Slab",
+	"block.mubble.blue_quartz_paving_slab": "Dalle en carrelage de quartz bleu",
+	"block.mubble.light_blue_quartz_paving_slab": "Dalle en carrelage de quartz bleu clair",
+	"block.mubble.cyan_quartz_paving_slab": "Dalle en carrelage de quartz cyan",
+	"block.mubble.green_quartz_paving_slab": "Dalle en carrelage de quartz vert",
+	"block.mubble.lime_quartz_paving_slab": "Dalle en carrelage de quartz vert clair",
+	"block.mubble.yellow_quartz_paving_slab": "Dalle en carrelage de quartz jaune",
+	"block.mubble.orange_quartz_paving_slab": "Dalle en carrelage de quartz orange",
+	"block.mubble.red_quartz_paving_slab": "Dalle en carrelage de quartz rouge",
+	"block.mubble.pink_quartz_paving_slab": "Dalle en carrelage de quartz rose",
+	"block.mubble.magenta_quartz_paving_slab": "Dalle en carrelage de quartz magenta",
+	"block.mubble.purple_quartz_paving_slab": "Dalle en carrelage de quartz violet",
+	"block.mubble.brown_quartz_paving_slab": "Dalle en carrelage de quartz marron",
+	"block.mubble.white_quartz_paving_slab": "Dalle en carrelage de quartz blanc",
+	"block.mubble.light_gray_quartz_paving_slab": "Dalle en carrelage de quartz gris clair",
+	"block.mubble.gray_quartz_paving_slab": "Dalle en carrelage de quartz gris",
+	"block.mubble.black_quartz_paving_slab": "Dalle en carrelage de quartz noir",
 
-	"//block.mubble.blue_quartz_paving_vertical_slab": "Blue Quartz Paving Vertical Slab",
-	"//block.mubble.light_blue_quartz_paving_vertical_slab": "Light Blue Quartz Paving Vertical Slab",
-	"//block.mubble.cyan_quartz_paving_vertical_slab": "Cyan Quartz Paving Vertical Slab",
-	"//block.mubble.green_quartz_paving_vertical_slab": "Green Quartz Paving Vertical Slab",
-	"//block.mubble.lime_quartz_paving_vertical_slab": "Lime Quartz Paving Vertical Slab",
-	"//block.mubble.yellow_quartz_paving_vertical_slab": "Yellow Quartz Paving Vertical Slab",
-	"//block.mubble.orange_quartz_paving_vertical_slab": "Orange Quartz Paving Vertical Slab",
-	"//block.mubble.red_quartz_paving_vertical_slab": "Red Quartz Paving Vertical Slab",
-	"//block.mubble.pink_quartz_paving_vertical_slab": "Pink Quartz Paving Vertical Slab",
-	"//block.mubble.magenta_quartz_paving_vertical_slab": "Magenta Quartz Paving Vertical Slab",
-	"//block.mubble.purple_quartz_paving_vertical_slab": "Purple Quartz Paving Vertical Slab",
-	"//block.mubble.brown_quartz_paving_vertical_slab": "Brown Quartz Paving Vertical Slab",
-	"//block.mubble.white_quartz_paving_vertical_slab": "White Quartz Paving Vertical Slab",
-	"//block.mubble.light_gray_quartz_paving_vertical_slab": "Light Gray Quartz Paving Vertical Slab",
-	"//block.mubble.gray_quartz_paving_vertical_slab": "Gray Quartz Paving Vertical Slab",
-	"//block.mubble.black_quartz_paving_vertical_slab": "Black Quartz Paving Vertical Slab",
+	"block.mubble.blue_quartz_paving_vertical_slab": "Dalle verticale en carrelage de quartz bleu",
+	"block.mubble.light_blue_quartz_paving_vertical_slab": "Dalle verticale en carrelage de quartz bleu clair",
+	"block.mubble.cyan_quartz_paving_vertical_slab": "Dalle verticale en carrelage de quartz cyan",
+	"block.mubble.green_quartz_paving_vertical_slab": "Dalle verticale en carrelage de quartz vert",
+	"block.mubble.lime_quartz_paving_vertical_slab": "Dalle verticale en carrelage de quartz vert clair",
+	"block.mubble.yellow_quartz_paving_vertical_slab": "Dalle verticale en carrelage de quartz jaune",
+	"block.mubble.orange_quartz_paving_vertical_slab": "Dalle verticale en carrelage de quartz orange",
+	"block.mubble.red_quartz_paving_vertical_slab": "Dalle verticale en carrelage de quartz rouge",
+	"block.mubble.pink_quartz_paving_vertical_slab": "Dalle verticale en carrelage de quartz rose",
+	"block.mubble.magenta_quartz_paving_vertical_slab": "Dalle verticale en carrelage de quartz magenta",
+	"block.mubble.purple_quartz_paving_vertical_slab": "Dalle verticale en carrelage de quartz violet",
+	"block.mubble.brown_quartz_paving_vertical_slab": "Dalle verticale en carrelage de quartz marron",
+	"block.mubble.white_quartz_paving_vertical_slab": "Dalle verticale en carrelage de quartz blanc",
+	"block.mubble.light_gray_quartz_paving_vertical_slab": "Dalle verticale en carrelage de quartz gris clair",
+	"block.mubble.gray_quartz_paving_vertical_slab": "Dalle verticale en carrelage de quartz gris",
+	"block.mubble.black_quartz_paving_vertical_slab": "Dalle verticale en carrelage de quartz noir",
 
 	"block.mubble.red_christmas_bauble": "Boule de Noël rouge",
 	"block.mubble.orange_christmas_bauble": "Boule de Noël orange",
@@ -969,12 +969,12 @@
 	"item.mubble.vanadium": "Vanadium",
 	"item.mubble.bismuth_dust": "Poudre de bismuth",
 	"item.mubble.crystallized_bismuth": "Bismuth cristallisé",
-	"//item.mubble.bismuth_sword": "Bismuth Sword",
-	"//item.mubble.bismuth_shovel": "Bismuth Shovel",
-	"//item.mubble.bismuth_pickaxe": "Bismuth Pickaxe",
-	"//item.mubble.bismuth_axe": "Bismuth Axe",
-	"//item.mubble.bismuth_hoe": "Bismuth Hoe",
-	"//item.mubble.diamond_stick": "Diamond Stick",
+	"item.mubble.bismuth_sword": "Épée en bismuth",
+	"item.mubble.bismuth_shovel": "Pelle en bismuth",
+	"item.mubble.bismuth_pickaxe": "Pioche en bismuth",
+	"item.mubble.bismuth_axe": "Hache en bismuth",
+	"item.mubble.bismuth_hoe": "Houe en bismuth",
+	"item.mubble.diamond_stick": "Bâton en diamant",
 	"item.mubble.permafrost_brick": "Brique du Permafrost",
 	"item.mubble.bandage": "Bandage",
 	"item.mubble.wheat_flour": "Farine de blé",
