Added Telekinesis enchantment
+ Updated version 1.14.4-28.1.111
+ Updated mappings 20200102-1.14.3

--- a/src/main/resources/assets/mubble/lang/de_de.json
+++ b/src/main/resources/assets/mubble/lang/de_de.json
@@ -1149,6 +1149,11 @@
 
 
 
+	"comment": "ENCHANTMENTS",
+	"//enchantment.mubble.telekinesis": "Telekinesis",
+
+
+
 	"comment": "CONTAINERS",
 	"container.mubble.placer": "Platzierer",
 	"container.mubble.timeswap_table": "Zeitvertauschungstisch",
