--- a/src/main/resources/assets/mubble/lang/en_us.json
+++ b/src/main/resources/assets/mubble/lang/en_us.json
@@ -1149,6 +1149,11 @@
 
 
 
+	"comment": "ENCHANTMENTS",
+	"enchantment.mubble.telekinesis": "Telekinesis",
+
+
+
 	"comment": "CONTAINERS",
 	"container.mubble.placer": "Placer",
 	"container.mubble.timeswap_table": "Timeswap Table",
