--- a/src/main/resources/assets/mubble/lang/fr_fr.json
+++ b/src/main/resources/assets/mubble/lang/fr_fr.json
@@ -1149,6 +1149,11 @@
 
 
 
+	"comment": "ENCHANTMENTS",
+	"//enchantment.mubble.telekinesis": "Telekinesis",
+
+
+
 	"comment": "CONTAINERS",
 	"container.mubble.placer": "Placeur",
 	"container.mubble.timeswap_table": "Table d'échange temporel",
