--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -1150,7 +1150,7 @@
 
 
 	"comment": "ENCHANTMENTS",
-	"//enchantment.mubble.telekinesis": "Telekinesis",
+	"enchantment.mubble.telekinesis": "Afstandelijke Voorwerpbeweging",
 
 
 
