made itemGroups IDs use a namespace

--- a/src/main/resources/assets/mubble/lang/de_de.json
+++ b/src/main/resources/assets/mubble/lang/de_de.json
@@ -1,7 +1,7 @@
 {
 	"comment": "CREATIVE TABS",
-	"itemGroup.costumes": "Kostüme",
-	"//itemGroup.instruments": "Instruments",
+	"itemGroup.mubble.costumes": "Kostüme",
+	"//itemGroup.mubble.instruments": "Instruments",
 
 
 
