--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -1,7 +1,7 @@
 {
 	"comment": "CREATIVE TABS",
-	"itemGroup.costumes": "Kostuums",
-	"itemGroup.instruments": "Instrumenten",
+	"itemGroup.mubble.costumes": "Kostuums",
+	"itemGroup.mubble.instruments": "Instrumenten",
 
 
 
