--- a/src/main/resources/assets/mubble/lang/en_gb.json
+++ b/src/main/resources/assets/mubble/lang/en_gb.json
@@ -1,7 +1,7 @@
 {
 	"comment": "CREATIVE TABS",
-	"itemGroup.costumes": "Costumes",
-	"//itemGroup.instruments": "Instruments",
+	"itemGroup.mubble.costumes": "Costumes",
+	"//itemGroup.mubble.instruments": "Instruments",
 
 
 
