--- a/src/main/resources/assets/mubble/lang/zh_tw.json
+++ b/src/main/resources/assets/mubble/lang/zh_tw.json
@@ -1017,6 +1017,24 @@
 	"item.mubble.smash_ball": "粉碎球",
 
 
+	"//item.mubble.white_lightsaber": "White Lightsaber",
+	"//item.mubble.light_gray_lightsaber": "Light Gray Lightsaber",
+	"//item.mubble.gray_lightsaber": "Gray Lightsaber",
+	"//item.mubble.black_lightsaber": "Black Lightsaber",
+	"//item.mubble.brown_lightsaber": "Brown Lightsaber",
+	"//item.mubble.red_lightsaber": "Red Lightsaber",
+	"//item.mubble.orange_lightsaber": "Orange Lightsaber",
+	"//item.mubble.yellow_lightsaber": "Yellow Lightsaber",
+	"//item.mubble.lime_lightsaber": "Lime Lightsaber",
+	"//item.mubble.green_lightsaber": "Green Lightsaber",
+	"//item.mubble.cyan_lightsaber": "Cyan Lightsaber",
+	"//item.mubble.light_blue_lightsaber": "Light Blue Lightsaber",
+	"//item.mubble.blue_lightsaber": "Blue Lightsaber",
+	"//item.mubble.purple_lightsaber": "Purple Lightsaber",
+	"//item.mubble.magenta_lightsaber": "Magenta Lightsaber",
+	"//item.mubble.pink_lightsaber": "Pink Lightsaber",
+
+
 	"//item.mubble.blank_music_disc": "Blank Music Disc",
 	"//item.mubble.music_disc_battlefield": "Music Disc",
 	"//item.mubble.music_disc_champions_road": "Music Disc",
