--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -590,10 +590,14 @@
 	"block.mubble.silver_shiny_garland": "Zilvere glanzende slinger",
 	"block.mubble.gold_shiny_garland": "Goude glanzende slinger",
 
+	"//block.mubble.white_present": "White Present",
+	"//block.mubble.black_present": "Black Present",
 	"block.mubble.blue_present": "Blauw cadeau",
 	"block.mubble.green_present": "Groen cadeau",
 	"block.mubble.yellow_present": "Geel cadeau",
 	"block.mubble.red_present": "Rood cadeau",
+	"//block.mubble.purple_present": "Purple Present",
+	"//block.mubble.golden_present": "Golden Present",
 
 	"block.mubble.footblock": "Voetblok",
 	
