--- a/src/main/resources/assets/mubble/lang/es_es.json
+++ b/src/main/resources/assets/mubble/lang/es_es.json
@@ -1090,6 +1090,7 @@
 	"item.mubble.super_mushroom": "Súper champiñón",
 	"item.mubble.peach": "Durazno",
 	"item.mubble.fireball": "Bola de fuego",
+	"//item.mubble.iceball": "Iceball",
 	"item.mubble.cape_feather": "Pluma",
 	"//item.mubble.super_cape_feather": "<newline>",
 	"item.mubble.super_star": "Superestrella",
@@ -1276,6 +1277,7 @@
 	"//entity.mubble.goomba": "Goomba",
 	"entity.mubble.toad": "Toad",
 	"//entity.mubble.fireball": "Fireball",
+	"//entity.mubble.iceball": "Iceball",
 
 
 
@@ -1315,6 +1317,7 @@
 	"//subtitles.mubble.entity.chincho.hurt": "Chincho hurts",
 	"//subtitles.mubble.entity.chincho.death": "Chincho dies",
 	"//subtitles.mubble.entity.fireball.throw": "Fireball flies",
+	"//subtitles.mubble.entity.iceball.throw": "Iceball flies",
 	"//subtitles.mubble.entity.goomba.crush": "Goomba crushed",
 	"//subtitles.mubble.entity.goomba.hurt": "Goomba hurts",
 	"//subtitles.mubble.entity.goomba.death": "Goomba dies",
