--- a/src/main/resources/assets/mubble/lang/lol_us.json
+++ b/src/main/resources/assets/mubble/lang/lol_us.json
@@ -1090,6 +1090,7 @@
 	"item.mubble.super_mushroom": "SUPA MUSH",
 	"item.mubble.peach": "salty peesh very gud",
 	"//item.mubble.fireball": "Fireball",
+	"//item.mubble.iceball": "Iceball",
 	"item.mubble.cape_feather": "cool feather that VOOHOOING",
 	"item.mubble.super_cape_feather": "OMG INFINI JUMP FEATHER",
 	"item.mubble.super_star": "SUPA STARR",
@@ -1276,6 +1277,7 @@
 	"entity.mubble.goomba": "gonba",
 	"entity.mubble.toad": "tod",
 	"//entity.mubble.fireball": "Fireball",
+	"//entity.mubble.iceball": "Iceball",
 
 
 
@@ -1315,6 +1317,7 @@
 	"//subtitles.mubble.entity.chincho.hurt": "Chincho hurts",
 	"//subtitles.mubble.entity.chincho.death": "Chincho dies",
 	"//subtitles.mubble.entity.fireball.throw": "Fireball flies",
+	"//subtitles.mubble.entity.iceball.throw": "Iceball flies",
 	"//subtitles.mubble.entity.goomba.crush": "Goomba crushed",
 	"//subtitles.mubble.entity.goomba.hurt": "Goomba hurts",
 	"//subtitles.mubble.entity.goomba.death": "Goomba dies",
