--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -1090,6 +1090,7 @@
 	"item.mubble.super_mushroom": "Super paddenstoel",
 	"item.mubble.peach": "Perzik",
 	"//item.mubble.fireball": "Fireball",
+	"//item.mubble.iceball": "Iceball",
 	"item.mubble.cape_feather": "Cape veer",
 	"item.mubble.super_cape_feather": "Supercape veer",
 	"item.mubble.super_star": "Super ster",
@@ -1276,6 +1277,7 @@
 	"entity.mubble.goomba": "Goomba",
 	"entity.mubble.toad": "Toad",
 	"//entity.mubble.fireball": "Fireball",
+	"//entity.mubble.iceball": "Iceball",
 
 
 
@@ -1315,6 +1317,7 @@
 	"subtitles.mubble.entity.chincho.hurt": "Chincho heeft pijn",
 	"subtitles.mubble.entity.chincho.death": "Chincho sterft",
 	"//subtitles.mubble.entity.fireball.throw": "Fireball flies",
+	"//subtitles.mubble.entity.iceball.throw": "Iceball flies",
 	"subtitles.mubble.entity.goomba.crush": "Goomba verpletterd",
 	"subtitles.mubble.entity.goomba.hurt": "Goomba heeft pijn",
 	"subtitles.mubble.entity.goomba.death": "Goomba sterft",
