custom banner pattern now works

--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -1011,39 +1011,39 @@
 	"block.mubble.potted_scarlet_orchid": "Gepotte scharlake orchidee",
 	"block.mubble.potted_potato_flower": "Gepotte aardappelbloem",
 
-	"block.minecraft.banner.star.blue": "Blauwe ster",
-	"block.minecraft.banner.star.light_blue": "Lichblauwe ster",
-	"block.minecraft.banner.star.cyan": "Turquoise ster",
-	"block.minecraft.banner.star.green": "Groene ster",
-	"block.minecraft.banner.star.lime": "Lichtgroene ster",
-	"block.minecraft.banner.star.yellow": "Gele ster",
-	"block.minecraft.banner.star.orange": "Oranje ster",
-	"block.minecraft.banner.star.red": "Rode ster",
-	"block.minecraft.banner.star.pink": "Roze ster",
-	"block.minecraft.banner.star.magenta": "Magenta ster",
-	"block.minecraft.banner.star.purple": "Paarse ster",
-	"block.minecraft.banner.star.brown": "Bruine ster",
-	"block.minecraft.banner.star.white": "Witte ster",
-	"block.minecraft.banner.star.light_gray": "Lichtgrijze ster",
-	"block.minecraft.banner.star.gray": "Grijze ster",
-	"block.minecraft.banner.star.black": "Zwarte ster",
+	"bannerpp.pattern.mubble.star.blue": "Blauwe ster",
+	"bannerpp.pattern.mubble.star.light_blue": "Lichblauwe ster",
+	"bannerpp.pattern.mubble.star.cyan": "Turquoise ster",
+	"bannerpp.pattern.mubble.star.green": "Groene ster",
+	"bannerpp.pattern.mubble.star.lime": "Lichtgroene ster",
+	"bannerpp.pattern.mubble.star.yellow": "Gele ster",
+	"bannerpp.pattern.mubble.star.orange": "Oranje ster",
+	"bannerpp.pattern.mubble.star.red": "Rode ster",
+	"bannerpp.pattern.mubble.star.pink": "Roze ster",
+	"bannerpp.pattern.mubble.star.magenta": "Magenta ster",
+	"bannerpp.pattern.mubble.star.purple": "Paarse ster",
+	"bannerpp.pattern.mubble.star.brown": "Bruine ster",
+	"bannerpp.pattern.mubble.star.white": "Witte ster",
+	"bannerpp.pattern.mubble.star.light_gray": "Lichtgrijze ster",
+	"bannerpp.pattern.mubble.star.gray": "Grijze ster",
+	"bannerpp.pattern.mubble.star.black": "Zwarte ster",
 
-	"block.minecraft.banner.smash_ball.blue": "Blauwe smashbal",
-	"block.minecraft.banner.smash_ball.light_blue": "Lichtblauwe smashbal",
-	"block.minecraft.banner.smash_ball.cyan": "Turquoise smashbal",
-	"block.minecraft.banner.smash_ball.green": "Groene smashbal",
-	"block.minecraft.banner.smash_ball.lime": "Lichtgroene smashbal",
-	"block.minecraft.banner.smash_ball.yellow": "Gele smashbal",
-	"block.minecraft.banner.smash_ball.orange": "Oranje smashbal",
-	"block.minecraft.banner.smash_ball.red": "Rode smashbal",
-	"block.minecraft.banner.smash_ball.pink": "Roze smashbal",
-	"block.minecraft.banner.smash_ball.magenta": "Magenta smashbal",
-	"block.minecraft.banner.smash_ball.purple": "Paarse smashbal",
-	"block.minecraft.banner.smash_ball.brown": "Bruine smashbal",
-	"block.minecraft.banner.smash_ball.white": "Witte smashbal",
-	"block.minecraft.banner.smash_ball.light_gray": "Lichtgrijze smashbal",
-	"block.minecraft.banner.smash_ball.gray": "Grijze smashbal",
-	"block.minecraft.banner.smash_ball.black": "Zwarte smashbal",
+	"bannerpp.pattern.mubble.smash_ball.blue": "Blauwe smashbal",
+	"bannerpp.pattern.mubble.smash_ball.light_blue": "Lichtblauwe smashbal",
+	"bannerpp.pattern.mubble.smash_ball.cyan": "Turquoise smashbal",
+	"bannerpp.pattern.mubble.smash_ball.green": "Groene smashbal",
+	"bannerpp.pattern.mubble.smash_ball.lime": "Lichtgroene smashbal",
+	"bannerpp.pattern.mubble.smash_ball.yellow": "Gele smashbal",
+	"bannerpp.pattern.mubble.smash_ball.orange": "Oranje smashbal",
+	"bannerpp.pattern.mubble.smash_ball.red": "Rode smashbal",
+	"bannerpp.pattern.mubble.smash_ball.pink": "Roze smashbal",
+	"bannerpp.pattern.mubble.smash_ball.magenta": "Magenta smashbal",
+	"bannerpp.pattern.mubble.smash_ball.purple": "Paarse smashbal",
+	"bannerpp.pattern.mubble.smash_ball.brown": "Bruine smashbal",
+	"bannerpp.pattern.mubble.smash_ball.white": "Witte smashbal",
+	"bannerpp.pattern.mubble.smash_ball.light_gray": "Lichtgrijze smashbal",
+	"bannerpp.pattern.mubble.smash_ball.gray": "Grijze smashbal",
+	"bannerpp.pattern.mubble.smash_ball.black": "Zwarte smashbal",
 
 
 
