--- a/src/main/resources/assets/mubble/lang/en_gb.json
+++ b/src/main/resources/assets/mubble/lang/en_gb.json
@@ -1011,39 +1011,39 @@
 	"block.mubble.potted_scarlet_orchid": "Potted Scarlet Orchid",
 	"block.mubble.potted_potato_flower": "Potted Potato Flower",
 
-	"//block.minecraft.banner.star.blue": "Blue Star",
-	"//block.minecraft.banner.star.light_blue": "Light Blue Star",
-	"//block.minecraft.banner.star.cyan": "Cyan Star",
-	"//block.minecraft.banner.star.green": "Green Star",
-	"//block.minecraft.banner.star.lime": "Lime Star",
-	"//block.minecraft.banner.star.yellow": "Yellow Star",
-	"//block.minecraft.banner.star.orange": "Orange Star",
-	"//block.minecraft.banner.star.red": "Red Star",
-	"//block.minecraft.banner.star.pink": "Pink Star",
-	"//block.minecraft.banner.star.magenta": "Magenta Star",
-	"//block.minecraft.banner.star.purple": "Purple Star",
-	"//block.minecraft.banner.star.brown": "Brown Star",
-	"//block.minecraft.banner.star.white": "White Star",
-	"//block.minecraft.banner.star.light_gray": "Light Gray Star",
-	"//block.minecraft.banner.star.gray": "Gray Star",
-	"//block.minecraft.banner.star.black": "Black Star",
+	"//bannerpp.pattern.mubble.star.blue": "Blue Star",
+	"//bannerpp.pattern.mubble.star.light_blue": "Light Blue Star",
+	"//bannerpp.pattern.mubble.star.cyan": "Cyan Star",
+	"//bannerpp.pattern.mubble.star.green": "Green Star",
+	"//bannerpp.pattern.mubble.star.lime": "Lime Star",
+	"//bannerpp.pattern.mubble.star.yellow": "Yellow Star",
+	"//bannerpp.pattern.mubble.star.orange": "Orange Star",
+	"//bannerpp.pattern.mubble.star.red": "Red Star",
+	"//bannerpp.pattern.mubble.star.pink": "Pink Star",
+	"//bannerpp.pattern.mubble.star.magenta": "Magenta Star",
+	"//bannerpp.pattern.mubble.star.purple": "Purple Star",
+	"//bannerpp.pattern.mubble.star.brown": "Brown Star",
+	"//bannerpp.pattern.mubble.star.white": "White Star",
+	"//bannerpp.pattern.mubble.star.light_gray": "Light Gray Star",
+	"//bannerpp.pattern.mubble.star.gray": "Gray Star",
+	"//bannerpp.pattern.mubble.star.black": "Black Star",
 
-	"//block.minecraft.banner.smash_ball.blue": "Blue Smash Ball",
-	"//block.minecraft.banner.smash_ball.light_blue": "Light Blue Smash Ball",
-	"//block.minecraft.banner.smash_ball.cyan": "Cyan Smash Ball",
-	"//block.minecraft.banner.smash_ball.green": "Green Smash Ball",
-	"//block.minecraft.banner.smash_ball.lime": "Lime Smash Ball",
-	"//block.minecraft.banner.smash_ball.yellow": "Yellow Smash Ball",
-	"//block.minecraft.banner.smash_ball.orange": "Orange Smash Ball",
-	"//block.minecraft.banner.smash_ball.red": "Red Smash Ball",
-	"//block.minecraft.banner.smash_ball.pink": "Pink Smash Ball",
-	"//block.minecraft.banner.smash_ball.magenta": "Magenta Smash Ball",
-	"//block.minecraft.banner.smash_ball.purple": "Purple Smash Ball",
-	"//block.minecraft.banner.smash_ball.brown": "Brown Smash Ball",
-	"//block.minecraft.banner.smash_ball.white": "White Smash Ball",
-	"//block.minecraft.banner.smash_ball.light_gray": "Light Gray Smash Ball",
-	"//block.minecraft.banner.smash_ball.gray": "Gray Smash Ball",
-	"//block.minecraft.banner.smash_ball.black": "Black Smash Ball",
+	"//bannerpp.pattern.mubble.smash_ball.blue": "Blue Smash Ball",
+	"//bannerpp.pattern.mubble.smash_ball.light_blue": "Light Blue Smash Ball",
+	"//bannerpp.pattern.mubble.smash_ball.cyan": "Cyan Smash Ball",
+	"//bannerpp.pattern.mubble.smash_ball.green": "Green Smash Ball",
+	"//bannerpp.pattern.mubble.smash_ball.lime": "Lime Smash Ball",
+	"//bannerpp.pattern.mubble.smash_ball.yellow": "Yellow Smash Ball",
+	"//bannerpp.pattern.mubble.smash_ball.orange": "Orange Smash Ball",
+	"//bannerpp.pattern.mubble.smash_ball.red": "Red Smash Ball",
+	"//bannerpp.pattern.mubble.smash_ball.pink": "Pink Smash Ball",
+	"//bannerpp.pattern.mubble.smash_ball.magenta": "Magenta Smash Ball",
+	"//bannerpp.pattern.mubble.smash_ball.purple": "Purple Smash Ball",
+	"//bannerpp.pattern.mubble.smash_ball.brown": "Brown Smash Ball",
+	"//bannerpp.pattern.mubble.smash_ball.white": "White Smash Ball",
+	"//bannerpp.pattern.mubble.smash_ball.light_gray": "Light Gray Smash Ball",
+	"//bannerpp.pattern.mubble.smash_ball.gray": "Gray Smash Ball",
+	"//bannerpp.pattern.mubble.smash_ball.black": "Black Smash Ball",
 
 
 
