--- a/src/main/resources/assets/mubble/lang/fr_fr.json
+++ b/src/main/resources/assets/mubble/lang/fr_fr.json
@@ -1011,39 +1011,39 @@
 	"block.mubble.potted_scarlet_orchid": "Orchidée écarlate en pot",
 	"block.mubble.potted_potato_flower": "Fleur patate en pot",
 
-	"block.minecraft.banner.star.blue": "Étoile bleue",
-	"block.minecraft.banner.star.light_blue": "Étoile bleu clair",
-	"block.minecraft.banner.star.cyan": "Étoile cyan",
-	"block.minecraft.banner.star.green": "Étoile verte",
-	"block.minecraft.banner.star.lime": "Étoile clair",
-	"block.minecraft.banner.star.yellow": "Étoile jaune",
-	"block.minecraft.banner.star.orange": "Étoile orange",
-	"block.minecraft.banner.star.red": "Étoile rouge",
-	"block.minecraft.banner.star.pink": "Étoile rose",
-	"block.minecraft.banner.star.magenta": "Étoile magenta",
-	"block.minecraft.banner.star.purple": "Étoile violette",
-	"block.minecraft.banner.star.brown": "Étoile marron",
-	"block.minecraft.banner.star.white": "Étoile blanche",
-	"block.minecraft.banner.star.light_gray": "Étoile gris clair",
-	"block.minecraft.banner.star.gray": "Étoile grise",
-	"block.minecraft.banner.star.black": "Étoile noire",
+	"bannerpp.pattern.mubble.star.blue": "Étoile bleue",
+	"bannerpp.pattern.mubble.star.light_blue": "Étoile bleu clair",
+	"bannerpp.pattern.mubble.star.cyan": "Étoile cyan",
+	"bannerpp.pattern.mubble.star.green": "Étoile verte",
+	"bannerpp.pattern.mubble.star.lime": "Étoile clair",
+	"bannerpp.pattern.mubble.star.yellow": "Étoile jaune",
+	"bannerpp.pattern.mubble.star.orange": "Étoile orange",
+	"bannerpp.pattern.mubble.star.red": "Étoile rouge",
+	"bannerpp.pattern.mubble.star.pink": "Étoile rose",
+	"bannerpp.pattern.mubble.star.magenta": "Étoile magenta",
+	"bannerpp.pattern.mubble.star.purple": "Étoile violette",
+	"bannerpp.pattern.mubble.star.brown": "Étoile marron",
+	"bannerpp.pattern.mubble.star.white": "Étoile blanche",
+	"bannerpp.pattern.mubble.star.light_gray": "Étoile gris clair",
+	"bannerpp.pattern.mubble.star.gray": "Étoile grise",
+	"bannerpp.pattern.mubble.star.black": "Étoile noire",
 
-	"//block.minecraft.banner.smash_ball.blue": "Balle Smash bleue",
-	"//block.minecraft.banner.smash_ball.light_blue": "Balle Smash bleu clair",
-	"//block.minecraft.banner.smash_ball.cyan": "Balle Smash cyan",
-	"//block.minecraft.banner.smash_ball.green": "Balle Smash verte",
-	"//block.minecraft.banner.smash_ball.lime": "Balle Smash clair",
-	"//block.minecraft.banner.smash_ball.yellow": "Balle Smash jaune",
-	"//block.minecraft.banner.smash_ball.orange": "Balle Smash orange",
-	"//block.minecraft.banner.smash_ball.red": "Balle Smash rouge",
-	"//block.minecraft.banner.smash_ball.pink": "Balle Smash rose",
-	"//block.minecraft.banner.smash_ball.magenta": "Balle Smash magenta",
-	"//block.minecraft.banner.smash_ball.purple": "Balle Smash violette",
-	"//block.minecraft.banner.smash_ball.brown": "Balle Smash marron",
-	"//block.minecraft.banner.smash_ball.white": "Balle Smash blanche",
-	"//block.minecraft.banner.smash_ball.light_gray": "Balle Smash gris clair",
-	"//block.minecraft.banner.smash_ball.gray": "Balle Smash grise",
-	"//block.minecraft.banner.smash_ball.black": "Balle Smash noire",
+	"//bannerpp.pattern.mubble.smash_ball.blue": "Balle Smash bleue",
+	"//bannerpp.pattern.mubble.smash_ball.light_blue": "Balle Smash bleu clair",
+	"//bannerpp.pattern.mubble.smash_ball.cyan": "Balle Smash cyan",
+	"//bannerpp.pattern.mubble.smash_ball.green": "Balle Smash verte",
+	"//bannerpp.pattern.mubble.smash_ball.lime": "Balle Smash clair",
+	"//bannerpp.pattern.mubble.smash_ball.yellow": "Balle Smash jaune",
+	"//bannerpp.pattern.mubble.smash_ball.orange": "Balle Smash orange",
+	"//bannerpp.pattern.mubble.smash_ball.red": "Balle Smash rouge",
+	"//bannerpp.pattern.mubble.smash_ball.pink": "Balle Smash rose",
+	"//bannerpp.pattern.mubble.smash_ball.magenta": "Balle Smash magenta",
+	"//bannerpp.pattern.mubble.smash_ball.purple": "Balle Smash violette",
+	"//bannerpp.pattern.mubble.smash_ball.brown": "Balle Smash marron",
+	"//bannerpp.pattern.mubble.smash_ball.white": "Balle Smash blanche",
+	"//bannerpp.pattern.mubble.smash_ball.light_gray": "Balle Smash gris clair",
+	"//bannerpp.pattern.mubble.smash_ball.gray": "Balle Smash grise",
+	"//bannerpp.pattern.mubble.smash_ball.black": "Balle Smash noire",
 
 
 
